Added personal description

--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
 									<h6>Hello Everybody, i am</h6>
 									<h3>Andre Catarino</h3>
 									<h4>Systems Administrator and Software Developer</h4>
-									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
-									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
-									</ul>
+                                    <p>Welcome to my personal web page.
+                                     <br>I am an Undergraduate at NJIT majoring in Information Technology.
+                                    <br>Check the "About" page if you wish to learn more about me.
+                                    <br>Check the "Portfolio" page to see my work.
+                                    </p>
+                                    <p>Social media contacts are listed below. If you wish to reach me through other means, check the "Contact" page.</p>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
