Added content to portfolio page, added github link

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
 				<div class="banner_inner d-flex align-items-center">
 					<div class="container">
 						<div class="banner_content text-center">
-							<h2>About Me</h2>
+							<h2>Portfolio</h2>
 						</div>
 					</div>
 				</div>
@@ -71,15 +71,10 @@
         		<div class="row welcome_inner">
         			<div class="col-lg-6">
         				<div class="welcome_text">
-        					<h4>Education</h4>
-        					<p>A.S. Computer Information Systems (CIS) <br> Undergraduate NJIT 2019 <br> B.S. Information Technology<br> Specialization in Web Development and Network Security</p>
+        					<h4>See My Work</h4>
+        					<p>Visit my <a href="https://github.com/ac639/" target="_blank">Github Page</a>  to see my completed projects, as well as projects I am currently working on. <br> </p>
 
-							<h4>Interests</h4>
-							<p>Systems Administration (Networks, Databases, CMSs) <br> Software Development (Web Frontend/Backend)
 
-							</p>
-							<h4>Work Experience</h4>
-							<p>Systems administrator for small business (maintain Windows Server/CentOS systems) <br> Video Game Development/Asset Design (self-employed since 2017)</p>
         				</div>
         			</div>
         		</div>
